--- a/.jsdos/dosbox.conf
+++ b/.jsdos/dosbox.conf
@@ -190,8 +190,9 @@ c:
 type jsdos~1/readme.txt
 echo on
 
-cd NIGHT
-IML
+cd DYNAMIX
+HOC
+
 
 # Generated using https://js-dos.com
 # █▀▀▀▀▀█ █  ▄▄▄▀▀█ █▀▀▀▀▀█
