--- a/.jsdos/dosbox.conf
+++ b/.jsdos/dosbox.conf
@@ -190,8 +190,10 @@ c:
 type jsdos~1/readme.txt
 echo on
 
-cd mstreets
-ms
+cd Populous
+cd POPULOUS
+POPULOUS
+
 
 
 # Generated using https://js-dos.com
